# ghostbind

./: .gitignore  Cargo.toml  README.md
.ghostbind/cache/x86_64-unknown-linux-gnu/: test_crate-manifest.json
.ghostbind/cache/x86_64-unknown-linux-gnu/headers/: test_crate.h
docs/: FFI_SAFETY.md  INDEX.md  QUICKSTART.md  ZBUILD_INTEGRATION.md
examples/test_crate/: Cargo.toml  cbindgen.toml
examples/test_crate/src/: lib.rs
src/: artifact_discovery.rs  cargo_integration.rs  cli.rs  header_generation.rs  lib.rs  main.rs  manifest.rs  target_mapping.rs
