[package]
name = "ghostbind"
version = "0.1.0"
edition = "2024"
description = "A tiny, predictable build/FFI bridge that lets Zig consume Rust crates"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ghostbind"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
cargo_metadata = "0.18"
which = "4.4"
